# gitnote

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .project  BUILD.md  BUILD_RU.md  CHANGELOG.md  CHANGELOG_RU.md  CONTRIBUTING.md  DEV.md  DEV_RU.md  README.md  README_RU.md  build.gradle.kts  flake.nix  generate-release-keys.sh  justfile  settings.gradle.kts  setup-release-env.sh
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: build_apk.yml  build_git.yml  build_test.yml  ci.yml  debug.yml  nightly.yml  nightly_release.yml  release.yml  upload_artifacts copy.yml  upload_artifacts.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.example.gitnote.data.room.AppDatabase/: 1.json
app/schemas/com.example.gitnote.data.room.RepoDatabase/: 1.json  2.json
app/schemas/io.github.wiiznokes.gitnote.data.room.RepoDatabase/: 2.json
app/src/debug/res/drawable/: ic_launcher_foreground.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CallbackHandler.cpp  CallbackHandler.h  git_wrapper.cpp  gitnote.cpp  logging.cpp  logging.h  merge.cpp  merge.h  remote.cpp  remote.h
app/src/main/res/drawable/: cloud_alert_24px.xml  ic_launcher_background.xml  (+2 more)
app/src/main/rust/: .gitignore  Cargo.toml  Makefile  NDK_VERSION  build.rs  justfile
app/src/main/rust/.cargo/: config.toml
app/src/main/rust/src/: key_gen.rs  lib.rs  merge.rs  mime_types.rs  test.rs  url.rs  utils.rs
app/src/main/rust/src/libgit2/: merge.rs  mod.rs  test.rs  test_merge.rs
app/src/main/rust/supported_extensions/: text.txt
assets/: GitNote Logo.graphite
doc/: features.md
doc/design/: markdown_header.md
doc/examples/: completed-task.md  markdown-demo.md  meeting-notes.md  simple-note.md  task-note.md  welcome-note.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/cs-CZ/: full_description.txt  short_description.txt
metadata/en-US/: full_description.txt  short_description.txt
metadata/pt-BR/: full_description.txt  short_description.txt
metadata/ru-RU/: full_description.txt  short_description.txt
metadata/uk/: full_description.txt  short_description.txt
(+202 files in other folders)
