[package]
name = "git_wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
git2 = { version = "0.20.2", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
jni = "0.21"
android_logger = "0.15.1"
log = "0.4.27"
rand_core = { version = "0.6", features = ["std"] }
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
anyhow = "1.0.98"
zeroize = "1"
