[package]
name = "git_wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
git2 = { version = "0.21", features = [
    "vendored-libgit2",
    "vendored-openssl",
    "ssh",
    "https",
] }
jni = "0.22"
android_logger = "0.15"
log = "0.4"
rand_core = { version = "0.6", features = ["std"] }
ssh-key = { version = "0.6", default-features = false, features = [
    "alloc",
    "ed25519",
] }
anyhow = "1"
zeroize = "1"
libgit2-sys = "0.18"
include-lines = "1"
gix-url = "0.36"
bstr = "1.13"


[profile.release]
strip = "symbols"
